first pass at harmonious templates
